--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "4.6.0",
     "date-fns": "2.8.1",
     "formik": "^2.2.6",
+    "localforage": "^1.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
