--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "unirest": "^0.6.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10",
